fix: flink install